--- a/public/Pacientes.html
+++ b/public/Pacientes.html
@@ -196,7 +196,7 @@
         xhr.send();
     }
     
-    // Carregar os pacientes automaticamente ao abrir a página
+    // Carregar os pacientes ao abrir a página
     document.addEventListener("DOMContentLoaded", carregarPacientes);
 
     function editarCadastro(index) {
