--- a/public/Home.html
+++ b/public/Home.html
@@ -22,6 +22,9 @@
       <li><a href="#"><i class="bi bi-people"></i><span>Equipe</span></a></li>
       <li><a href="#"><i class="bi bi-bar-chart"></i><span>Relatórios</span></a></li>
       <li><a href="#"><i class="bi bi-gear"></i><span>Configurações</span></a></li>
+      <li><a href="./sobre.html"><i class="bi bi-info-circle"></i><span>Sobre</span></a></li>
+      <li><a href="./Contato.html"><i class="bi bi-envelope"></i><span>Contato</span></a></li>
+      <li><a href="./faleConosco.html"><i class="bi bi-chat"></i><span>Fale Conosco</span></a></li>
     </ul>
   </div>
 
